# src/auth_service/go/routers.go
@@ -6,7 +6,7 @@
  * API version: 1.0.0
  * Generated by: Swagger Codegen (https://github.com/swagger-api/swagger-codegen.git)
  */
-package swagger
+package auth_service
 
 import (
 	"fmt"
@@ -73,5 +73,40 @@ var routes = Routes{
 		strings.ToUpper("Put"),
 		"/myProfile",
 		MyProfilePut,
+	},
+
+	Route{
+		"CreateTaskPost",
+		strings.ToUpper("Post"),
+		"/tasks/create",
+		CreateTaskPost,
+	},
+
+	Route{
+		"UpdateTaskPut",
+		strings.ToUpper("Put"),
+		"/tasks/update/{task_id}",
+		UpdateTaskPut,
+	},
+
+	Route{
+		"DeleteTaskPost",
+		strings.ToUpper("Delete"),
+		"/tasks/delete/{task_id}",
+		DeleteTaskDelete,
+	},
+
+	Route{
+		"GetTaskGet",
+		strings.ToUpper("Get"),
+		"/tasks/get/{task_id}",
+		GetTaskGet,
+	},
+
+	Route{
+		"GetTaskPageGet",
+		strings.ToUpper("Get"),
+		"/tasks/getPage",
+		GetTaskPageGet,
 	},
 }
